
   Add support for numpad keys, and a few other standard keys that were not handled
   Add AT-SPI interface
   Add configuration screen to choose interface type (requires restart)
   Make tooltip display 'running' or 'paused' depending on service status
   Fix hotkeys not working if Capslock or Numlock are on
   Get rid of interface switching code
   Create manpage
   Implement recently typed phrase/command detection
   Fix bug where the system would sometimes lock up a while after displaying a phrase menu
   Fix bug with EvDev interface where repeated keypress (key being held down) are ignored
   Fix PhraseMenu sorting, and make it sort alphabetically if not by usage count
    
 -- Chris Dekter <cdekter@gmail.com>  Wed, 8 Jul 2009 20:38:05 +1000

autokey (0.54.3-0~jaunty) jaunty; urgency=low

   Fix daemon sometimes dying when receiving events with integer code
   Make daemon find devices using by-path entries instead of relying on HAL
   Update TODO
   Make Comment in .desktop entry nicer. Add GenericName
	
 -- Chris Dekter <cdekter@gmail.com>  Tue, 7 Jul 2009 08:38:05 +1000

autokey (0.54.2-0~jaunty) jaunty; urgency=low

   Fix daemon dropping connection on mouse clicks
   Add logging and command line option to set level to debug
   Add LSB info to daemon script
	
 -- Chris Dekter <cdekter@gmail.com>  Sun, 5 Jul 2009 18:38:05 +1000

autokey (0.54.1-0~jaunty) jaunty; urgency=low

   Refactor daemon so it starts successfully during boot
   Fix problem where daemon exits if run on a PC without a touchpad
   Fix initialisation of global hotkeys
   Fix inability to configure any hotkeys
	
 -- Chris Dekter <cdekter@gmail.com>  Sun, 5 Jul 2009 00:11:05 +1000

autokey (0.54.0-0~jaunty) jaunty; urgency=low

   Add new EvDev interface as an alternative where XRecord is not available.
   Make EvDev the default (changing to XRecord will require hacking the code, for now).
   Fix bug where Cut/Copy/Paste entries under Edit menu were not correctly disabled.
   